<resources>
    <string name="app_name">SuperQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="welcome_fragment_title">Welcome to the Super Quiz</string>
    <string name="welcome_fragment_ask_name">What\'s your name?</string>
    <string name="welcome_fragment_button">Let\'s play</string>
    <string name="welcome_fragment_edit_text_placeholder">Please type your name here</string>
    <string name="app_title">SuperQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Question ?</string>
    <string name="good_answer">💪 Good Answer !</string>
    <string name="bad_answer">"Bad answer 😢"</string>
    <string name="quiz_fragment_next">Next</string>
    <string name="quiz_fragment_finish">Finish</string>
    <string name="quiz_fragment_final_score">Your final score is : </string>

</resources>