<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/welcome_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:paddingHorizontal="70dp"
        android:paddingVertical="30dp"
        android:text="@string/welcome_fragment_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_fragment_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:text="@string/welcome_fragment_ask_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ems="10"
        android:hint="@string/welcome_fragment_edit_text_placeholder"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/welcome_fragment_button"
        android:textSize="20sp" />


</LinearLayout>