<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".QuizFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        android:background="@color/darkGray"
        android:gravity="center"
        android:paddingVertical="50dp"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="Answer A" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="Answer B" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="Answer C" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="Answer D" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/validityText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/good_answer"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            tools:visibility="visible" />


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/darkGray"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/quiz_fragment_next"
            android:textSize="18sp"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>


</LinearLayout>